# all-in-one-transcriber

./: .gitignore  README.md  all_in_one_transcriber_diar.py  environment.yml  pyproject.toml  requirements.txt  run_transcribe.bat  run_transcribe.bat - Shortcut.lnk  transcribe.py
.github/workflows/: build.yml
