[project]
name = "all-in-one-transcriber"
version = "0.1.0"
description = "Zero-setup Whisper STT with optional diarization (Gradio UI + CLI)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Luke Alexander Squires"}]
keywords = ["whisper", "transcription", "speech-to-text", "diarization", "gradio"]

dependencies = [
  "faster-whisper>=1.0.0",
  "imageio-ffmpeg>=0.4.9",
  "gradio>=4.0.0"
]

[project.optional-dependencies]
diar = ["pyannote.audio>=3.1", "torch"]

[project.scripts]
transcriber = "all_in_one_transcriber_diar:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
